--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_rating_bar: ^4.0.1
   cloud_firestore: ^4.7.1
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
