--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation "androidx.browser:browser:1.3.0"
     // coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
