--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,9 +64,14 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_rating_bar: ^4.0.1
   cloud_firestore: ^4.7.1
-  # paytm_allinonesdk: ^1.1.7
-  paytm: ^3.0.1
+  paytm_allinonesdk: ^1.2.1
+  # paytm: ^3.0.1
+  pdf: ^3.10.4
   change_app_package_name: ^1.1.0
+  open_file_plus: ^3.4.1
+  path_provider: ^2.0.15
+  printing: ^5.11.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
