--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   pdf: ^3.10.4
   change_app_package_name: ^1.1.0
   open_file_plus: ^3.4.1
+  # open_file: ^3.3.2
   path_provider: ^2.0.15
   printing: ^5.11.0
   internet_connection_checker: ^1.0.0+1
@@ -99,6 +100,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    # - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -112,9 +114,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: Poppins
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: assets/fonts/Poppins-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
